--- a/app/src/main/res/layout/row_lists.xml
+++ b/app/src/main/res/layout/row_lists.xml
@@ -3,41 +3,58 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="@dimen/material_margin"
+    android:layout_marginRight="@dimen/material_margin"
+    android:layout_marginTop="@dimen/material_margin">
 
-    <com.common.base.BaseTextView
+    <TextView
         android:id="@+id/txtTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:maxLines="1"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
+        app:layout_constraintBottom_toTopOf="@+id/txtUserName"
+        app:layout_constraintEnd_toEndOf="@+id/txtUserName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:name="Title" />
+        tools:text="Title" />
 
-    <com.common.base.BaseTextView
-        android:id="@+id/txtBody"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
-        tools:name="Body" />
-
-    <com.common.base.BaseTextView
+    <TextView
         android:id="@+id/txtUserName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:maxLines="1"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        app:layout_constraintBottom_toTopOf="@+id/txtBody"
+        app:layout_constraintEnd_toEndOf="@+id/txtBody"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtBody"
-        tools:name="User Name" />
+        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
+        tools:text="User Name" />
 
-    <com.common.base.BaseTextView
-        android:id="@+id/txtNoComments"
+    <TextView
+        android:id="@+id/txtBody"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:maxLines="2"
         app:layout_constraintTop_toBottomOf="@+id/txtUserName"
-        tools:name="Number of comments" />
+        tools:text="Body" />
+
+    <TextView
+        android:id="@+id/txtNoComments"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtBody"
+        tools:text="Number of comments" />
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/colorAccent"
+        app:layout_constraintTop_toBottomOf="@+id/txtNoComments" />
 </android.support.constraint.ConstraintLayout>
